# vst3host

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
src/: app.cpp  app.h  component_handler.cpp  component_handler.h  lib.rs  main.cpp  main.rs  module.h  plugin.cpp  plugin.h  socket.cpp  window.cpp  window.h
src/vst/: host.rs  mod.rs  module.rs  plugin.rs
