[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
core-foundation = "0.9.4"
libloading = "0.8.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
winit = "0.30.1"
thiserror = "1.0.63"
num-derive = "0.4.2"
num-traits = "0.2.19"
bevy_ecs = "0.14.0"
vst3 = "0.1.2"
